# secureinput

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build  meson_options.txt
examples/: main.c  test.c
include/: secureinput.h
lib/: secureinput.asm  secureinput.c
tests/: bench_secureinput.c  test_const_time.c  test_const_time.h
